--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "root",
+  "name": "horizon-drive",
+  "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "lerna": "^3.22.1"
-  }
+  "workspaces": ["packages/*"]
 }
